# roadmapper_ai

./: .gitignore  .requirements.txt.swp  LICENSE  LICENSE.md  README.md  agentstack.json  pyproject-old.toml  pyproject.toml  requirements.txt  setup.py
src/: crew.py  main.py  output_structure.py  task_callbacks.py
src/config/: agents.yaml  tasks.yaml
src/webapp/: __init__.py  config.py  routes.py  task_runner.py  tool_options_blueprint.py
src/webapp/static/js/: sript.js
src/webapp/templates/: index.html  tool_options_input.html  tool_options_output.html
