[project]
name = "roadmapper_ai"
version = "0.0.1"
description = "Map, Organize and Clarify your Way Into Mastery of any Tool, Objective or Professional Role"
authors = [
    { name = "DMMutua", email = "davymtuerr@gmail.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "agentstack[crewai]",
]

[project.scripts]
roadmapper_ai = "roadmapper_ai.main:run"
run_crew = "roadmapper_ai.main:run"
train = "roadmapper_ai.main:train"
replay = "roadmapper_ai.main:replay"
test = "roadmapper_ai.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]